feat: config swagger for route and added guard for route
